--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-	"name": "unifi-ddns",
-	"version": "3.1.1",
-	"private": true,
-	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
-		"test": "vitest",
-		"coverage": "vitest run --coverage",
-		"cf-typegen": "wrangler types"
-	},
-	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "0.7.4",
-		"@cloudflare/workers-types": "4.20250224.0",
-		"@vitest/coverage-istanbul": "3.0.7",
-		"typescript": "5.8.2",
-		"vitest": "3.0.7",
-		"wrangler": "3.111.0"
-	},
-	"dependencies": {
-		"@cloudflare/types": "6.29.1",
-		"cloudflare": "^3.8.0"
-	}
+  "name": "unifi-ddns",
+  "version": "3.1.1",
+  "description": "Cloudflare DDNS (Dynamic DNS) support for UniFi OS",
+  "main": "src/index.js",
+  "scripts": {
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "cloudflare",
+    "worker",
+    "ddns",
+    "unifi",
+    "dns"
+  ],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "cloudflare": "^4.1.0"
+  },
+  "overrides": {
+    "form-data": "^4.0.4"
+  }
 }
